--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,18 @@
 name: Hello World
 on: workflow_dispatch
 jobs:
-  hello: 
+  build:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: build step
+        run:  echo "A build Job"
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Hello Step
-        run: echo "Welcome to git action" 
+      - name: Test step
+        run: echo "Runuing test case"
+  deploy:
+     runs-on: ubuntu-latest
+     steps:
+       - name: Deploymber
+         run: echo "running deployment steps
