--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,4 +15,4 @@ jobs:
      runs-on: ubuntu-latest
      steps:
        - name: Deploymber
-         run: echo "running deployment steps
+         run: echo "running deployment steps"
