--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,11 +8,13 @@ jobs:
         run:  echo "A build Job"
   test:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Test step
         run: echo "Runuing test case"
   deploy:
      runs-on: ubuntu-latest
+     needs: test
      steps:
        - name: Deploymber
          run: echo "running deployment steps"
