--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,6 @@
 name: Hello World
-on: workflow_dispatch
+# on: workflow_dispatch  # manual trigger
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
