--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,9 +8,11 @@ on:
       - 'release/**'
   
   pull_request:
+    types:
+      - opened
     branches:
       - main
-      
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,4 +30,4 @@ jobs:
      needs: test  # create dependency
      steps:
        - name: Deploymber
-         run: echo "running deployment steps"
+         run: echo "running deployment steps"  #pr release
