--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: build step
-        run:  echo "A build Job"
+        run:  echo "A build Job name = ${{ .vars.MY_NAME }}"
   test:
     runs-on: ubuntu-latest
     needs: build
