--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,4 +31,4 @@ jobs:
      needs: test  # create dependency
      steps:
        - name: Deploymber
-         run: echo "running deployment steps"  #pr release
+         run: echo "running deployment steps" 
