--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
     needs: build
     steps:
       - name: Test step
-        run: echo "Runuing test case"
+        run: echo "Runuing test case ${{ vars.MY_NAME }}"
   deploy:
      runs-on: ubuntu-latest
      needs: test  # create dependency
