--- a/.github/workflows/checkout_action.yaml
+++ b/.github/workflows/checkout_action.yaml
@@ -2,8 +2,8 @@ name: Checkout-action
 on: push
 jobs:
   checkout:
-    runs_on: ubuntu_latest
-    step:
+    runs-on: ubuntu_latest
+    steps:
       - name: Checkout the code
         uses: actions/checkout@v4
       - name: Print Index.html
